updated name of the app

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "rhythm",
+    "name": "Rhythm",
     "slug": "rhythm-reactor",
     "version": "1.0.0",
     "orientation": "portrait",
